--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ We provide free consultation!</h2>
 
 <h2>Apply Now</h2>
 
-<form><!-- Add your form fields here, for example: --><input placeholder="Your Full Name" required="" type="text" /> <input placeholder="Email" required="" type="email" /><textarea placeholder="Your Message"></textarea><button type="submit">Submit</button></form>
+<form><!-- Add your form fields here, for example: --><input placeholder="--Full Name" required="" type="text" /> <input placeholder="Email" required="" type="email" /><textarea placeholder="Your Message"></textarea><button type="submit">Submit</button></form>
 </div>
 </div>
 <!-- Apply Now Modal End -->
