--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@ We provide free consultation!</h2>
 </a>
 <!-- ====== Back To Top End ====== -->
 
-<!-- ====== All Javascript Files ====== --><script src="assets/js/bootstrap.bundle.min.js"></script><script src="assets/js/wow.min.js"></script><script src="assets/js/main.js"></script>
+<!-- ====== All Javascript Files ====== --><script src="assets/js/bootstrap.bundle.min.js"></script><script src="assets/js/wow.min.js"></script><script src="assets/js/main.js"></script><script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 
 <script>
 	// Initialize EmailJS
