Updated the How can we help informationa and also the city details

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 							</div>
 							<div class="ud-info-meta">
 								<h5>Our Location</h5>
-								<p>Winnipeg, MB, Canada</p>
+								<p>Calgary, AB, Canada</p>
 							</div>
 						</div>
 						<div class="ud-single-info">
@@ -251,8 +251,8 @@
 							</div>
 							<div class="ud-info-meta">
 								<h5>How Can We Help?</h5>
-								<p>info@prowebsolutions.ca</p>
-								<p>contact@prowebsolutions.ca</p>
+								<p>inquire@prowebsolutions.ca</p>
+								<p>+1 (204) 952-8742</p>
 							</div>
 						</div>
 					</div>
